plugins {
	id 'org.springframework.boot' version '2.2.5.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_1_8

tasks.withType(JavaCompile).all {
	options.compilerArgs = [
			"--release", "8", // Avoid using Java 9+ APIs
			'--enable-preview',
	]
	options.compilerArgs << '-Xplugin:jabel'

	doFirst {
		options.compilerArgs = options.compilerArgs.findAll {
			it != '--enable-preview'
		}
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:0.3.0'
}
